--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
 apply plugin: 'forge'
 
 version = "1.0"
-group= "net.orekyuu.rabbithouse" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group= "net.orekyuu.rabbithouse"
 archivesBaseName = "rabbithouse"
 
 minecraft {
@@ -39,41 +39,39 @@ javadoc {
 }
 
 dependencies {
-    // you may put jars on which you depend on in ./libs
-    // or you may define them like so..
-    //compile "some.group:artifact:version:classifier"
-    //compile "some.group:artifact:version"
-      
-    // real examples
-    //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
-    //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
-
-    // for more info...
-    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-    // http://www.gradle.org/docs/current/userguide/dependency_management.html
-
+    compile 'com.google.code.gson:gson:2.2.4'
 }
 
 processResources
 {
-    // this will ensure that this task is redone when the versions change.
     inputs.property "version", project.version
     inputs.property "mcversion", project.minecraft.version
 
-    // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
-                
-        // replace version and mcversion
+
         expand 'version':project.version, 'mcversion':project.minecraft.version
     }
-        
-    // copy everything else, thats not the mcmod.info
+
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
 }
 
+task createBlock << {
+    File blocksFile = file('src/main/resources/net/orekyuu/rabbithouse/block/Blocks.json')
+    blocksFile.parentFile.mkdirs()
+    if(blocksFile.createNewFile())
+        println 'created Blocks.json.'
+}
+
+task initRabbitHouse << {
+    println '======================'
+    println 'Initialize RabbitHouse'
+    println '======================'
+
+    tasks.createBlock.execute()
+}
 [compileJava, compileTestJava].each{
     it.options.encoding = 'UTF-8'
     it.options.compilerArgs += ['-source', '1.7', '-target', '1.7']
