uploadArchiveタスクを編集

--- a/build.gradle
+++ b/build.gradle
@@ -78,3 +78,11 @@ processResources
     it.options.encoding = 'UTF-8'
     it.options.compilerArgs += ['-source', '1.7', '-target', '1.7']
 }
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: "file:/var/www/.m2/repository")
+        }
+    }
+}
