--- a/build.gradle
+++ b/build.gradle
@@ -82,7 +82,7 @@ processResources
 uploadArchives {
     repositories {
         mavenDeployer {
-            repository(url: "file:/var/www/.m2/repository")
+            repository(url: "file:${System.getProperty('user.home')}/.m2/repository")
         }
     }
 }
