--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,8 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.0"
-group= "net.orekyuu.rabbithouse"
+version = "1.0.0"
+group= "net.orekyuu"
 archivesBaseName = "rabbithouse"
 forgeVersion = "1.7.2-10.12.2.1121"
 
