--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,10 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.0.0"
+version = "1.7.10-1.0.0"
 group= "net.orekyuu"
 archivesBaseName = "rabbithouse"
-forgeVersion = "1.7.2-10.12.2.1121"
+forgeVersion = "1.7.10-10.13.0.1180"
 
 minecraft {
     version = forgeVersion
