--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ minecraft {
 
 javadoc {
     options.encoding = "UTF-8"
+    options.locale = 'ja_JP'
     project.configure(options) {
         memberLevel = org.gradle.external.javadoc.JavadocMemberLevel.PROTECTED
         charSet = "UTF-8"
