--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ minecraft {
 
 dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
+    testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
 processResources
