--- a/RabbitHouseTool/build.gradle
+++ b/RabbitHouseTool/build.gradle
@@ -6,8 +6,8 @@ dependencies {
     }
     compile 'com.google.code.gson:gson:2.2.4'
 }
-compileJava.encoding = 'UTF-8'
-compileTestJava.encoding = 'UTF-8'
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
 compileJava.options.compilerArgs += ['-source', '1.8', '-target', '1.8']
 compileTestJava.options.compilerArgs += ['-source', '1.8', '-target', '1.8']
 javadoc.options.encoding = 'UTF-8'
