--- a/RabbitHouseLibrary/build.gradle
+++ b/RabbitHouseLibrary/build.gradle
@@ -31,6 +31,7 @@ minecraft {
 dependencies {
     compile project(':RabbitHouseTool')
     compile 'com.google.code.gson:gson:2.2.4'
+    testCompile 'com.googlecode.jmockit:jmockit:1.6'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
